<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="@dimen/h_distance_side">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/mail_box"
        android:layout_marginLeft="@dimen/h_distance_side"
        android:layout_marginRight="@dimen/h_distance_side"
        android:textColor="@color/_6"
        android:textSize="@dimen/p16" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:text="@string/mail_address"
        android:textColor="@color/_6" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="#D9D9D9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/_9"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#E5E5E5" />

        <TextView
            android:id="@+id/tv_sure"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/copy"
            android:textColor="#02A4FF"
            android:textSize="16dp" />
    </LinearLayout>
</LinearLayout>
