<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_ordinary"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:paddingTop="@dimen/h30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            style="@style/universal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setting"
            android:textColor="@color/white" />
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.LinearLayoutCompat
        style="@style/setting_linear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <android.support.v7.widget.AppCompatTextView
            android:layout_marginTop="@dimen/h4"
            android:id="@+id/setting_mine"
            style="@style/setting_text"
            android:drawableLeft="@drawable/head"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/_6"
            android:drawablePadding="@dimen/h6"
            />

        <include layout="@layout/divide_layout" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/contact"
            style="@style/setting_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawablePadding="@dimen/h4"
            android:layout_marginBottom="@dimen/h4"
            android:text="@string/contact" />
    </android.support.v7.widget.LinearLayoutCompat>

    <!--<android.support.v7.widget.LinearLayoutCompat
        style="@style/setting_linear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/setting_login_pw"
            style="@style/setting_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawablePadding="@dimen/h4"
            android:gravity="center_vertical"
            android:text="@string/setting_login_pw" />

        <include layout="@layout/divide_layout" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/setting_login"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/h_distance_20"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/setting_login"
                android:textColor="@color/common_color"
                android:textSize="@dimen/p18" />

            <Switch
                android:id="@+id/setting_re_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />
        </android.support.v7.widget.LinearLayoutCompat>

        <include layout="@layout/divide_layout" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/setting_pw"
            style="@style/setting_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawablePadding="@dimen/h4"
            android:gravity="center_vertical"
            android:text="@string/setting_pw" />
    </android.support.v7.widget.LinearLayoutCompat>-->

    <android.support.v7.widget.LinearLayoutCompat
        style="@style/setting_linear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/setting_safe"
            style="@style/setting_text"
            android:layout_marginTop="@dimen/h4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:drawablePadding="@dimen/h4"
            android:text="@string/setting_safe" />

        <include layout="@layout/divide_layout" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/setting_coin"
            style="@style/setting_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:drawablePadding="@dimen/h4"
            android:text="@string/setting_default" />

        <include layout="@layout/divide_layout" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/setting_language"
            style="@style/setting_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:drawablePadding="@dimen/h4"
            android:layout_marginBottom="@dimen/h4"
            android:text="@string/setting_language" />
    </android.support.v7.widget.LinearLayoutCompat>

    <!--<android.support.v7.widget.LinearLayoutCompat
        style="@style/setting_linear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/check_update"
            style="@style/setting_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/h4"
            android:text="@string/setting_update" />
    </android.support.v7.widget.LinearLayoutCompat>-->

    <android.support.v7.widget.LinearLayoutCompat
        style="@style/setting_linear"
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/h_distance_20"
        android:layout_weight="8">
        <android.support.v7.widget.AppCompatTextView
            android:layout_marginTop="@dimen/h4"
            android:id="@+id/setting_problem"
            style="@style/setting_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:drawablePadding="@dimen/h4"
            android:text="@string/setting_problem" />

        <include layout="@layout/divide_layout" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/setting_about_us"
            style="@style/setting_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:drawablePadding="@dimen/h4"
            android:text="@string/setting_about_us" />
        <include layout="@layout/divide_layout" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/check_update"
            style="@style/setting_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:drawablePadding="@dimen/h4"
            android:layout_marginBottom="@dimen/h4"
            android:text="@string/setting_update" />
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>